--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ include:
 stages:
   - build-test
   - mongo-nfs-itest
+  - mongo-fire-itest
   - auto-deploy-dev-bio-commandline
   - auto-deploy-dev-submitter
   - auto-deploy-dev-handlers
@@ -62,3 +63,7 @@ build-test:
 mongo-nfs-itest:
   stage: mongo-nfs-itest
   script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=false --rerun-tasks --stacktrace
+
+mongo-fire-itest:
+  stage: mongo-fire-itest
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=true --rerun-tasks --stacktrace
