Pivotal ID # 182034592: FIRE API Version
Add the version to the FIRE API

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -67,6 +67,7 @@ app:
     host: # FIRE host
     username: # FIRE user
     password: # FIRE password
+    version: # FIRE version
   security:
     captchaKey: # Captcha validation token
     checkCaptcha: false
