--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,11 +21,15 @@ stages:
   - mongo-nfs-itest
   - mongo-fire-itest
   - auto-deploy-dev-bio-commandline
+  - auto-deploy-beta-bio-commandline
   - auto-deploy-dev-submitter
+  - auto-deploy-beta-submitter
   - auto-deploy-dev-handlers
+  - auto-deploy-beta-handlers
   - deploy-dev-submitter
   - deploy-beta-submitter
   - deploy-prod-submitter
+  - deploy-ae-submitter
   - deploy-dev-pmc
   - deploy-beta-pmc
   - deploy-prod-pmc
@@ -45,6 +49,7 @@ stages:
   - deploy-dev-handlers
   - deploy-beta-handlers
   - deploy-prod-handlers
+  - deploy-ae-handlers
 
 build-test:
   stage: build-test
