--- a/ci/submission-handlers.yml
+++ b/ci/submission-handlers.yml
@@ -3,6 +3,11 @@
     - build-test
   script: gradle deployHandlers -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/handlers/dev
 
+.deploy-beta-handlers:
+  dependencies:
+    - build-test
+  script: gradle deployHandlers -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/handlers/beta
+
 auto-deploy-dev-handlers:
   extends: .deploy-dev-handlers
   stage: auto-deploy-dev-handlers
@@ -10,19 +15,22 @@ auto-deploy-dev-handlers:
     refs:
       - master
 
+auto-deploy-beta-handlers:
+  extends: .deploy-beta-handlers
+  stage: auto-deploy-beta-handlers
+  only:
+    refs:
+      - beta
+
 deploy-dev-handlers:
+  extends: .deploy-dev-handlers
   stage: deploy-dev-handlers
   when: manual
-  dependencies:
-    - build-test
-  script: gradle deployHandlers -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/handlers/dev
 
 deploy-beta-handlers:
+  extends: .deploy-beta-handlers
   stage: deploy-beta-handlers
   when: manual
-  dependencies:
-    - build-test
-  script: gradle deployHandlers -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/handlers/beta
 
 deploy-prod-handlers:
   stage: deploy-prod-handlers
@@ -30,3 +38,10 @@ deploy-prod-handlers:
   dependencies:
     - build-test
   script: gradle deployHandlers -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/handlers/prod
+
+deploy-ae-handlers:
+  stage: deploy-ae-handlers
+  when: manual
+  dependencies:
+    - build-test
+  script: gradle deployHandlers -Penv=ae -PdeployPath=/nfs/biostudies/.adm/apps/handlers/ae
