Pivotal ID # 182034592: FIRE API Version
- Set default version
- Set proper packaging level to constant value

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -67,7 +67,7 @@ app:
     host: # FIRE host
     username: # FIRE user
     password: # FIRE password
-    version: # FIRE version
+    version: v1.1
   security:
     captchaKey: # Captcha validation token
     checkCaptcha: false
