--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -39,6 +39,7 @@ app:
     host: # FIRE host
     username: # FIRE user
     password: # FIRE password
+    version: v1.1
   security:
     captchaKey: # Captcha validation token. Not required for local environment
     checkCaptcha: false
