Pivotal # 181568867: Remove .pagetab Extension
- Add feature flag
- Remove unused code

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -39,3 +39,5 @@ app:
     smtp:
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
+  featureFlags:
+    tsvPagetabExtension: true
