--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -88,4 +88,4 @@ app:
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
   featureFlags:
-    tsvPagetabExtension: # Decides whether the feature to remove the .pagetab extension is enabled
+    tsvPagetabExtension: true
