code review changes

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -88,4 +88,4 @@ app:
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
   featureFlags:
-    tsvPagetabExtension: true
+    tsvPagetabExtension: false
