Pivotal ID # 182273948: Command Line Migration Command
Set FIRE resource as priority

--- a/deploy.gradle
+++ b/deploy.gradle
@@ -5,7 +5,7 @@ remotes {
     }
 
     beta {
-        host = 'biostudies-beta.ebi.ac.uk'
+        host = 'biostudy-dev.ebi.ac.uk'
         user = 'ma-svc'
     }
 
