--- a/deploy.gradle
+++ b/deploy.gradle
@@ -5,8 +5,8 @@ remotes {
     }
 
     beta {
-        host = 'biostudy-dev.ebi.ac.uk'
-        user = 'ma-svc'
+        host = 'biostudies-beta.ebi.ac.uk'
+        user = 'bs-svc'
     }
 
     prod {
@@ -22,7 +22,7 @@ remotes {
 
 ssh.settings {
     knownHosts = allowAnyHosts
-    identity = System.getenv("MASVC_SSH_KEY")
+    identity = System.getenv("BS_SVC_SSH_KEY")
     logging = "stdout"
 }
 
