Pivotal ID #181028528: Migrate Backend To HL
Test scp

--- a/deploy.gradle
+++ b/deploy.gradle
@@ -24,6 +24,7 @@ ssh.settings {
     knownHosts = allowAnyHosts
     identity = System.getenv("BS_SVC_SSH_KEY")
     logging = "stdout"
+    fileTransfer = "scp"
 }
 
 task deploySubmitter {
