--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,14 +8,14 @@ variables:
   ITEST_FAIL_FACTOR: "8"
 
 include:
-#  - local: '/ci/submitter.yml'
+  - local: '/ci/submitter.yml'
 #  - local: '/ci/pmc-processor.yml'
 #  - local: '/ci/exporter.yml'
 #  - local: '/ci/submission-releaser.yml'
 #  - local: '/ci/scheduler.yml'
 #  - local: '/ci/bio-admin.yml'
   - local: '/ci/bio-commandline.yml'
-#  - local: '/ci/submission-handlers.yml'
+  - local: '/ci/submission-handlers.yml'
 
 stages:
   - build-test
@@ -23,14 +23,14 @@ stages:
 #  - mongo-fire-itest
   - auto-deploy-dev-bio-commandline
   - auto-deploy-beta-bio-commandline
-#  - auto-deploy-dev-submitter
-#  - auto-deploy-beta-submitter
-#  - auto-deploy-dev-handlers
-#  - auto-deploy-beta-handlers
-#  - deploy-dev-submitter
-#  - deploy-beta-submitter
-#  - deploy-prod-submitter
-#  - deploy-ae-submitter
+  - auto-deploy-dev-submitter
+  - auto-deploy-beta-submitter
+  - auto-deploy-dev-handlers
+  - auto-deploy-beta-handlers
+  - deploy-dev-submitter
+  - deploy-beta-submitter
+  - deploy-prod-submitter
+  - deploy-ae-submitter
 #  - deploy-dev-pmc
 #  - deploy-beta-pmc
 #  - deploy-prod-pmc
@@ -47,15 +47,15 @@ stages:
   - deploy-dev-bio-commandline
   - deploy-beta-bio-commandline
   - deploy-prod-bio-commandline
-#  - deploy-dev-handlers
-#  - deploy-beta-handlers
-#  - deploy-prod-handlers
-#  - deploy-ae-handlers
+  - deploy-dev-handlers
+  - deploy-beta-handlers
+  - deploy-prod-handlers
+  - deploy-ae-handlers
 
 build-test:
   stage: build-test
 #  script: gradle clean build test -x itest -x jacocoTestCoverageVerification buildArtifacts --stacktrace
-  script: gradle clean client:bio-commandline:shadowJar
+  script: gradle clean buildArtifacts
   artifacts:
     paths:
 #      - bio-admin/build/libs/bio-admin-1.0.0.jar
@@ -64,8 +64,8 @@ build-test:
 #      - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
 #      - scheduler/exporter-task/build/libs/exporter-task-1.0.0.jar
 #      - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
-#      - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
-#      - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
+      - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
+      - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
 
 #mongo-nfs-itest:
 #  needs: ["build-test"]
