--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,70 +9,74 @@ variables:
 
 include:
   - local: '/ci/submitter.yml'
-#  - local: '/ci/pmc-processor.yml'
-#  - local: '/ci/exporter.yml'
-#  - local: '/ci/submission-releaser.yml'
-#  - local: '/ci/scheduler.yml'
-#  - local: '/ci/bio-admin.yml'
+  - local: '/ci/pmc-processor.yml'
+  - local: '/ci/exporter.yml'
+  - local: '/ci/submission-releaser.yml'
+  - local: '/ci/scheduler.yml'
+  - local: '/ci/bio-admin.yml'
   - local: '/ci/bio-commandline.yml'
   - local: '/ci/submission-handlers.yml'
 
 stages:
   - build-test
-#  - mongo-nfs-itest
-#  - mongo-fire-itest
+  - mongo-nfs-itest
+  - mongo-fire-itest
   - auto-deploy-dev-bio-commandline
   - auto-deploy-beta-bio-commandline
+  - auto-deploy-prod-bio-commandline
   - auto-deploy-dev-submitter
   - auto-deploy-beta-submitter
+  - auto-deploy-prod-submitter
+  - auto-deploy-sandbox-submitter
   - auto-deploy-dev-handlers
   - auto-deploy-beta-handlers
+  - auto-deploy-prod-handlers
+  - auto-deploy-sandbox-handlers
   - deploy-dev-submitter
   - deploy-beta-submitter
   - deploy-prod-submitter
-  - deploy-ae-submitter
-#  - deploy-dev-pmc
-#  - deploy-beta-pmc
-#  - deploy-prod-pmc
-#  - deploy-dev-exporter-task
-#  - deploy-beta-exporter-task
-#  - deploy-prod-exporter-task
-#  - deploy-dev-releaser-task
-#  - deploy-beta-releaser-task
-#  - deploy-prod-releaser-task
-#  - deploy-dev-scheduler
-#  - deploy-beta-scheduler
-#  - deploy-prod-scheduler
-#  - deploy-bio-admin
+  - deploy-sandbox-submitter
+  - deploy-dev-pmc
+  - deploy-beta-pmc
+  - deploy-prod-pmc
+  - deploy-dev-exporter-task
+  - deploy-beta-exporter-task
+  - deploy-prod-exporter-task
+  - deploy-dev-releaser-task
+  - deploy-beta-releaser-task
+  - deploy-prod-releaser-task
+  - deploy-dev-scheduler
+  - deploy-beta-scheduler
+  - deploy-prod-scheduler
+  - deploy-bio-admin
   - deploy-dev-bio-commandline
   - deploy-beta-bio-commandline
   - deploy-prod-bio-commandline
   - deploy-dev-handlers
   - deploy-beta-handlers
   - deploy-prod-handlers
-  - deploy-ae-handlers
+  - deploy-sandbox-handlers
 
 build-test:
   stage: build-test
-#  script: gradle clean build test -x itest -x jacocoTestCoverageVerification buildArtifacts --stacktrace
-  script: gradle clean buildArtifacts
+  script: gradle clean build test -x itest -x jacocoTestCoverageVerification buildArtifacts --stacktrace
   artifacts:
     paths:
-#      - bio-admin/build/libs/bio-admin-1.0.0.jar
+      - bio-admin/build/libs/bio-admin-1.0.0.jar
       - client/bio-commandline/build/libs/BioStudiesCLI-2.0.jar
-#      - scheduler/scheduler/build/libs/scheduler-1.0.0.jar
-#      - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
-#      - scheduler/exporter-task/build/libs/exporter-task-1.0.0.jar
-#      - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
+      - scheduler/scheduler/build/libs/scheduler-1.0.0.jar
+      - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
+      - scheduler/exporter-task/build/libs/exporter-task-1.0.0.jar
+      - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
       - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
       - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
 
-#mongo-nfs-itest:
-#  needs: ["build-test"]
-#  stage: mongo-nfs-itest
-#  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=false --rerun-tasks --stacktrace
-#
-#mongo-fire-itest:
-#  needs: ["build-test"]
-#  stage: mongo-fire-itest
-#  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=true --rerun-tasks --stacktrace
+mongo-nfs-itest:
+  needs: ["build-test"]
+  stage: mongo-nfs-itest
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=false --rerun-tasks --stacktrace
+
+mongo-fire-itest:
+  needs: ["build-test"]
+  stage: mongo-fire-itest
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=true --rerun-tasks --stacktrace
