--- a/ci/scheduler.yml
+++ b/ci/scheduler.yml
@@ -3,18 +3,18 @@ deploy-dev-scheduler:
   when: manual
   dependencies:
     - build-test
-  script: gradle deployScheduler -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/scheduler/dev
+  script: gradle deployScheduler -Penv=dev -PdeployPath=scheduler/dev
 
 deploy-beta-scheduler:
   stage: deploy-beta-scheduler
   when: manual
   dependencies:
     - build-test
-  script: gradle deployScheduler -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/scheduler/beta
+  script: gradle deployScheduler -Penv=beta -PdeployPath=scheduler/beta
 
 deploy-prod-scheduler:
   stage: deploy-prod-scheduler
   when: manual
   dependencies:
     - build-test
-  script: gradle deployScheduler -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/scheduler/prod
+  script: gradle deployScheduler -Penv=prod -PdeployPath=scheduler/prod
