--- a/deploy.gradle
+++ b/deploy.gradle
@@ -22,7 +22,7 @@ remotes {
 
 ssh.settings {
     knownHosts = allowAnyHosts
-    identity = System.getenv("BS_SVC_SSH_KEY")
+    identity = System.getenv("BS_SSH_KEY")
     logging = "stdout"
 }
 
