Pivotal ID #182583027: PMC Export Empty Files
Add missing property for the exporter application executed by the scheduler

--- a/scheduler/exporter-task/src/main/resources/application.yml
+++ b/scheduler/exporter-task/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 app:
   fileName: # Name of the export file
   outputPath: # Path where the export file should be placed
+  tmpFilesPath: # Path to the temp folder to store files
   mode: # Export mode: PMC, PUBLIC_ONLY
 
   ftp:
