--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,10 +23,13 @@ stages:
   - mongo-fire-itest
   - auto-deploy-dev-bio-commandline
   - auto-deploy-beta-bio-commandline
+  - auto-deploy-prod-bio-commandline
   - auto-deploy-dev-submitter
   - auto-deploy-beta-submitter
+  - auto-deploy-prod-submitter
   - auto-deploy-dev-handlers
   - auto-deploy-beta-handlers
+  - auto-deploy-prod-handlers
   - deploy-dev-submitter
   - deploy-beta-submitter
   - deploy-prod-submitter
