Pivotal ID # 179922370: Modify Submission Metadata (#569)
* Pivotal ID # 179922370: Modify Submission Metadata

- Add a parameter to specify the preferred files sources
- Use the preferred source to prioritize the file sources
- Remove unused code and duplicated tests
- Improve code readability
- Include auto-deploy for prod
- Update docs
- Improve resources naming
- Add the option for multiple preferred sources
- Add a file configuration class for the requests

--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -8,6 +8,16 @@
     - build-test
   script: gradle deploySubmitter -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/submitter/beta -PjvmParams=-Xmx12g
 
+.deploy-prod-submitter:
+  dependencies:
+    - build-test
+  script: gradle deploySubmitter -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/submitter/prod -PjvmParams=-Xmx16g
+
+.deploy-ae-submitter:
+  dependencies:
+    - build-test
+  script: gradle deploySubmitter -Penv=ae -PdeployPath=/nfs/biostudies/.adm/apps/submitter/ae -PjvmParams=-Xmx16g
+
 auto-deploy-dev-submitter:
   extends: .deploy-dev-submitter
   stage: auto-deploy-dev-submitter
@@ -22,6 +32,13 @@ auto-deploy-beta-submitter:
     refs:
       - beta
 
+auto-deploy-prod-submitter:
+  extends: .deploy-prod-submitter
+  stage: auto-deploy-prod-submitter
+  only:
+    refs:
+      - prod
+
 deploy-dev-submitter:
   extends: .deploy-dev-submitter
   stage: deploy-dev-submitter
@@ -33,15 +50,11 @@ deploy-beta-submitter:
   when: manual
 
 deploy-prod-submitter:
+  extends: .deploy-prod-submitter
   stage: deploy-prod-submitter
   when: manual
-  dependencies:
-    - build-test
-  script: gradle deploySubmitter -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/submitter/prod -PjvmParams=-Xmx16g
 
 deploy-ae-submitter:
+  extends: .deploy-ae-submitter
   stage: deploy-ae-submitter
   when: manual
-  dependencies:
-    - build-test
-  script: gradle deploySubmitter -Penv=ae -PdeployPath=/nfs/biostudies/.adm/apps/submitter/ae -PjvmParams=-Xmx16g
