--- a/settings.gradle
+++ b/settings.gradle
@@ -37,9 +37,9 @@ include("submission:persistence-filesystem")
 include("submission:persistence-sql")
 include("submission:persistence-mongo")
 
-include("scheduler:cluster-client")
-include("scheduler:exporter-task")
-include("scheduler:pmc-processor-task")
 include("scheduler:scheduler")
-include("scheduler:submission-releaser-task")
+include("scheduler:cluster-client")
 include("scheduler:task-properties")
+include("scheduler:tasks:exporter-task")
+include("scheduler:tasks:pmc-processor-task")
+include("scheduler:tasks:submission-releaser-task")
