--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -1,22 +1,22 @@
 .deploy-dev-submitter:
   dependencies:
     - build-test
-  script: gradle deploySubmitter -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/submitter/dev
+  script: gradle deploySubmitter -Penv=dev -PdeployPath=$APPS_PATH/submitter/dev
 
 .deploy-beta-submitter:
   dependencies:
     - build-test
-  script: gradle deploySubmitter -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/submitter/beta -PjvmParams=-Xmx12g
+  script: gradle deploySubmitter -Penv=beta -PdeployPath=$APPS_PATH/submitter/beta -PjvmParams=-Xmx12g
 
 .deploy-prod-submitter:
   dependencies:
     - build-test
-  script: gradle deploySubmitter -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/submitter/prod -PjvmParams=-Xmx16g
+  script: gradle deploySubmitter -Penv=prod -PdeployPath=$APPS_PATH/submitter/prod -PjvmParams=-Xmx16g
 
-.deploy-ae-submitter:
+.deploy-sandbox-submitter:
   dependencies:
     - build-test
-  script: gradle deploySubmitter -Penv=ae -PdeployPath=/nfs/biostudies/.adm/apps/submitter/ae -PjvmParams=-Xmx16g
+  script: gradle deploySubmitter -Penv=sandbox -PdeployPath=$APPS_PATH/submitter/sandbox -PjvmParams=-Xmx16g
 
 auto-deploy-dev-submitter:
   extends: .deploy-dev-submitter
@@ -39,6 +39,13 @@ auto-deploy-prod-submitter:
     refs:
       - prod
 
+auto-deploy-sandbox-submitter:
+  extends: .deploy-sandbox-submitter
+  stage: auto-deploy-sandbox-submitter
+  only:
+    refs:
+      - prod
+
 deploy-dev-submitter:
   extends: .deploy-dev-submitter
   stage: deploy-dev-submitter
@@ -54,7 +61,7 @@ deploy-prod-submitter:
   stage: deploy-prod-submitter
   when: manual
 
-deploy-ae-submitter:
-  extends: .deploy-ae-submitter
-  stage: deploy-ae-submitter
+deploy-sandbox-submitter:
+  extends: .deploy-sandbox-submitter
+  stage: deploy-sandbox-submitter
   when: manual
