code review changes

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,7 +14,7 @@ include("commons:commons-transpiler")
 include("commons:commons-model-extended")
 include("commons:commons-model-extended-mapping")
 include("commons:commons-model-extended-serialization")
-include ('commons:commons-model-extended-test')
+include("commons:commons-model-extended-test")
 
 include("client:bio-webclient")
 include("client:bio-webclient-demo")
@@ -38,8 +38,8 @@ include("submission:persistence-sql")
 include("submission:persistence-mongo")
 
 include("scheduler:scheduler")
-include("scheduler:cluster-client")
-include("scheduler:task-properties")
+include("scheduler:common:cluster-client")
+include("scheduler:common:task-properties")
 include("scheduler:tasks:exporter-task")
 include("scheduler:tasks:pmc-processor-task")
 include("scheduler:tasks:submission-releaser-task")
