--- a/ci/scheduler.yml
+++ b/ci/scheduler.yml
@@ -1,3 +1,15 @@
+.deploy-prod-scheduler:
+  dependencies:
+    - build-test
+    script: gradle deployScheduler -Penv=prod -PdeployPath=$APPS_PATH/scheduler/prod
+
+auto-deploy-prod-scheduler:
+  extends: .deploy-prod-scheduler
+  stage: auto-deploy-prod-scheduler
+  only:
+    refs:
+      - prod
+
 deploy-dev-scheduler:
   stage: deploy-dev-scheduler
   when: manual
@@ -13,8 +25,6 @@ deploy-beta-scheduler:
   script: gradle deployScheduler -Penv=beta -PdeployPath=$APPS_PATH/scheduler/beta
 
 deploy-prod-scheduler:
+  extends: .deploy-prod-scheduler
   stage: deploy-prod-scheduler
   when: manual
-  dependencies:
-    - build-test
-  script: gradle deployScheduler -Penv=prod -PdeployPath=$APPS_PATH/scheduler/prod
