--- a/ci/submission-releaser.yml
+++ b/ci/submission-releaser.yml
@@ -1,20 +1,30 @@
-deploy-dev-submission-releaser-task:
+.deploy-prod-releaser-task:
+  dependencies:
+    - build-test
+  script: gradle updateReleaserArtifact -Penv=prod -PdeployPath=$APPS_PATH/scheduler/prod/apps
+
+auto-deploy-prod-releaser-task:
+  extends: .deploy-prod-releaser-task
+  stage: auto-deploy-prod-releaser-task
+  only:
+    refs:
+      - prod
+
+deploy-dev-releaser-task:
   stage: deploy-dev-releaser-task
   when: manual
   dependencies:
     - build-test
   script: gradle updateReleaserArtifact -Penv=dev -PdeployPath=$APPS_PATH/scheduler/dev/apps
 
-deploy-beta-submission-releaser-task:
+deploy-beta-releaser-task:
   stage: deploy-beta-releaser-task
   when: manual
   dependencies:
     - build-test
   script: gradle updateReleaserArtifact -Penv=beta -PdeployPath=$APPS_PATH/scheduler/beta/apps
 
-deploy-prod-submission-releaser-task:
+deploy-prod-releaser-task:
+  extends: .deploy-prod-releaser-task
   stage: deploy-prod-releaser-task
   when: manual
-  dependencies:
-    - build-test
-  script: gradle updateReleaserArtifact -Penv=prod -PdeployPath=$APPS_PATH/scheduler/prod/apps
